# archetype

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  justfile  package.nix
.github/workflows/: macos.yml  nix.yml  ubuntu.yml  windows.yml
docs/: how_it_works.md
include/archetype/: archetype.h  expanded.cpp
src/: basic_usage.cpp  example.cpp  example.h  mixin_patterns.cpp  multiinheritance.cpp  patterns.cpp  target_api.cpp
test/: CMakeLists.txt  fast_build.cpp  full_test.cpp  macro_test.cpp  main.cpp  test.cpp
